// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DirectoryPage Snapshots should render correctly with notary theme 1`] = `
<div>
  <div
    class="theme-provider theme-notary"
    data-directory="notary"
    data-testid="theme-provider"
    style="--color-primary: #1e40af; --color-secondary: #1e3a8a; --color-accent: #f97316; --color-primary-text: #FFFFFF; --color-secondary-text: #FFFFFF; --color-accent-text: #000000; --gradient-primary: linear-gradient(135deg, #1e40af 0%, #1e3a8a 100%);"
  >
    <div
      data-testid="directory-page"
    >
      Mocked Directory Page for 
      notary
    </div>
  </div>
</div>
`;

exports[`DirectoryPage Snapshots should render correctly with passport theme 1`] = `
<div>
  <div
    class="theme-provider theme-passport"
    data-directory="passport"
    data-testid="theme-provider"
    style="--color-primary: #10803d; --color-secondary: #065f46; --color-accent: #ca8a04; --color-primary-text: #FFFFFF; --color-secondary-text: #FFFFFF; --color-accent-text: #000000; --gradient-primary: linear-gradient(135deg, #10803d 0%, #065f46 100%);"
  >
    <div
      data-testid="directory-page"
    >
      Mocked Directory Page for 
      passport
    </div>
  </div>
</div>
`;
